# tag_master

./: CMakeLists.txt  package.xml
include/: tag_description.h
include/tag_master/: apriltag_detector.h  detector_base.h  tag_master.h  utils.h
launch/: tag_master.launch
msg/: TagPose.msg
param/: id_sizes.yaml  tag_descriptions.yaml  topic_names.yaml
src/: apriltag_detector.cpp  detector_base.cpp  tag_master.cpp  tag_master_node.cpp  utils.cpp
srv/: AddTagDescription.srv  EnableDetector.srv
